2006-06-15 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j56-UNSTABLE

 *** CHANGE ***

 * Moved inline_imagewrap.inc from html_wrap to layout

 * Removed (!):
	html_wrap/inline_photo.header.default
	html_wrap/inline_photo.frame.default
	html_wrap/inline_photothumb.frame.default
	html_wrap/inline_photo.footer.default
	html_wrap/inline_albumthumb.header.default
	html_wrap/inline_moviethumb.frame.default
	html_wrap/inline_albumthumb.frame.default
	html_wrap/inline_albumthumb.footer.default
	
 * Adjustments in
	templates/gallery.tpl.default
	templates/album.tpl.default
	templates/photo.tpl.default (!)

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j55-UNSTABLE

 * css -> 1.6
	tools/find_orphans.php

YEEEEEEEHA ! The last one. alpha-1 is near

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j54-UNSTABLE

*** CHANGE ***

 Template renaming, added stats and slideshow header files in template dir.

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j53-UNSTABLE

 *** CHANGE ***

 Template renaming, added gallery, album and photo header files in template dir.

 * General cleanup.

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j52-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.photo.default and html_wrap/photo.footer.default

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j51-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.album.default and html_wrap/album.footer.default

2006-06-14 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j50-UNSTABLE

 *** CHANGE ***

 Remove of html_wrap/gallery.header.default and html_wrap/gallery.footer.default

2006-06-13 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j49-UNSTABLE

 * More use of gTranslate()

 * css -> 1.6
	includes/errors/unconfigured.php
	captionator.php
	copy_photo.php
	imagemap.php

 * removed unneeded extra_fields.php

 * General Cleanups and HTML fixes

2006-06-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j48-UNSTABLE

 CHANGE:
 * combined (removed + create new template file)
	layout/commentbox.inc
	layout/commentboxtop.inc