@@ -80,15 +80,27 @@ $GALLERY_URL = ereg_replace("\/$", "", $GALLERY_URL);
 
 $MIN_PHP_MAJOR_VERSION = '4.1.0';
 
-if(fs_file_exists('./htaccess')) {
-    if ($GALLERY_REWRITE_OK) {
-	if (strstr($GALLERY_REWRITE_OK, "ampersandbroken")) {
-	    $GALLERY_REWRITE_SEPARATOR = "\&";
-	}
-	else {
-	    $GALLERY_REWRITE_SEPARATOR = "&";
-	}
+if ($init_mod_rewrite = getRequestVar('init_mod_rewrite')) {
+    $GALLERY_REWRITE_OK = true;
+
+    if (strstr($init_mod_rewrite, "ampersandbroken")) {
+	$GALLERY_REWRITE_SEPARATOR = "\&";
+    }
+    else {
+	$GALLERY_REWRITE_SEPARATOR = "&";
     }
 }
+else {
+    $GALLERY_REWRITE_OK = false;
+}
+
+
+
+
+
+
+
+
+
 
 ?>
