@@ -1,3 +1,9 @@
+2006-06-16 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j58-UNSTABLE
+
+ * Fix: mod_rewrite was broken in b29
+
+ * Fix: getTag was broken ib b37
+
 2006-06-15 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j56-UNSTABLE
 
  *** CHANGE ***
